MusashiGames/MusashiGames.css
body{
    /* background: url("IMG/largeGameBG.jpg") 0.5; */
    background-color:rgb(106, 106, 119);
    background-size: cover;
    background-repeat: no-repeat;
    height: auto;
    overflow-x: hidden;
}
::selection{
    color: rgb(223, 223, 223);
    background-color: rgb(113, 108, 108);
}
#lowerBG{
    /* background-color: rgb(207, 207, 215); */
    padding-top: 5px;
    padding-bottom: 5px;
    margin-top: 10px;
    left: 0%;
}
.originalCanvas{
    display: flex;
    height: 500px;
    justify-content: space-evenly;
    align-items: center;
    overflow: hidden;
    background-color:  rgb(40, 40, 40);
    border: solid 3px rgb(203, 203, 224);
    border-radius: 25px;
    margin-left: 30px;
    margin-right: 30px;
    margin-top: 40px;
    /* Makes stuff stretch relatively */
    transform: perspective(0);
    
}
.responsive {
    width: 100%;
    height: auto;
}

#navBar{
    display: flex;
    justify-content: space-between;
    background-color:  rgb(40, 40, 40);
    /* border: 50px rgb(216, 165, 165); */
    border-radius: 10px;
    padding: 20px;
}
#Mulogo{
    /* margin-top: 2vh; */
    padding-left: 6vh;
}
#MuGameNavi{
    position: absolute;
    right:10px;
    top: 0%;
    z-index: 3;
}
#rightBar{
    margin-top: 69px;
    right: 70px;
    position: absolute;
    display: flex;
    justify-content: flex-end;
    gap: 24px;
    z-index: 4;
}
.backPageBtn{
    cursor: pointer;
    position: relative;
    background: transparent;
    border: none;
    margin: 5px;
}
.backPageBtn .backHover {
    cursor: pointer;
    display: none;
    position: absolute;
    left: 5.5px;
    z-index: 5;
}
.backPageBtn:hover .backHover {
    cursor: pointer;
    display: inline;
}
.shareBtn{
    cursor: pointer;
    background-color: transparent;
    border: none;
    margin: 5px;
}
.shareBtn .shareHover {
    display: none;
    position: absolute;
    left: 108px;
    z-index: 5;
}

.shareBtn:hover .shareHover {
    display: inline;
}
.musicBtn{
    cursor: pointer;
    background-color: transparent;
    border: none;
    margin: 5px;
}
.musicBtn .vOnHover {
    display: none;
    position: absolute;
    left: 203px;
    z-index: 5;
}

.musicBtn:hover .vOnHover {
    display: inline;
}

#gameCaption{
    font-size: 40px;
    text-align: center;
    font-family: 'Poppins-Thin', 'arial'; 
    padding-top: 10px;
    color: rgb(203, 203, 224);
    z-index: 3;
}
#MuImg{
    position: relative;
    width: 300px;
    
}
#MuGameBgDeco1{
    opacity: 0.7;
    width: 900px;
    position: absolute;
    z-index: 1;
}
#startButton{
    cursor: pointer;
    background: none;
    border: none;
    z-index: 2;
}
#startButton:hover{
    box-shadow: 0px 1px 10px rgb(27, 11, 11);
    border-radius: 10px;
}
#howToPlay{
    cursor: pointer;
    z-index: 2;
    background: none;
    border: 0px;
    /* padding-left: 90%; */
}
#howToPlay:hover{
    box-shadow: 0px 1px 10px rgb(27, 11, 11);
    border-radius: 10px;
}
/* Fonts */
@font-face {
    font-family: Poppins-Thin;
    src: url(Fonts/Poppins-Thin.ttf);
    font-weight: lighter;
}

/* Game Tutorial */
#gameTutorial{
    display: flex;
    flex-wrap: wrap;
    background-color: rgb(40, 40, 40, 0.95);
    position: absolute;
    margin-left: 40px;
    margin-right: 40px;
    justify-content: center;
    top: 230px;
    border-radius: 20px;
    border: solid 5px rgb(27, 11, 11);
    visibility: hidden;
}
#closeTutorial{
    cursor: pointer;
    position: absolute;
    background-color: transparent;
    border: none;
    right: 10px;
    top: 10px;
}
#closeTutorial::before, #closeTutorial::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    bottom: 0;
    left: 0;
    transition: ease-in 0.3s;
    transition: ease-out 0.001s;
  }
  #closeTutorial:hover::after {
    animation-name: rotatecw;
    animation-duration: 2s;
    border: 1px solid rgba(255, 255, 255, 0.5);
  }
  #closeTutorial:hover::before {
    animation-name: rotateccw; 
    animation-duration: 3s;
    border: 1px solid rgba(255, 255, 255, 0.5);
  }
  #closeTutorial:hover::after, #closeTutorial:hover::before {
    animation-iteration-count: infinite;
    animation-timing-function: linear;
  }
  
  @keyframes rotatecw {
      from {transform: rotate(0deg);}
      to {transform: rotate(360deg);}
  }
  
  @keyframes rotateccw {
      from {transform: rotate(0deg);}
      to {transform: rotate(-360deg);}
  }
  
.Tutorial1{
    display: flex;
    text-align: center;
    justify-content: flex-start;
    align-items: center;
    width: 100%;
    color: rgb(255, 255, 255);
    font-family: 'Poppins-Thin', 'arial'; 
    font-weight: bolder;
}


/* After Start Game */
#gameStats{
    margin-top: 40px;
    margin-left: 40px;
    visibility: hidden;
    display: flex;
    gap: 40px;
    background-color: transparent;
}

#targetValue{
    font-size: 30px;
    font-weight: bold;
    font-family: 'Poppins-Thin', 'arial'; 
    text-align: center;
    left: 40px;
}
#targetNum{
    margin-left: -25px;
    font-size: 30px;
    font-weight: bold;
    font-family: 'Poppins-Thin', 'arial'; 
    text-align: center;
    left: 40px;
}
#targetBar{
    overflow: hidden;
    position: relative;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    border: transparent;
    background-color:transparent;
    height: 6.5vh;
}
#stopBtn{
    border: none;
    background-color: transparent;
}
#stop:hover {
    width: 50px;
}
#playBtn{
    border: none;
    background-color: transparent;
}
#pauseBtn{
    border: none;
    background-color: transparent;
}
#lives{
    visibility: hidden;
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 50px;
    padding-right: 10px;
}
#livesCaption{
    font-size: 20px;
    font-weight: bold;
    font-family: 'Poppins-Thin', 'arial'; 
    text-align: center;
}
#gameCanvas{
    margin-top: 20px;
    position: relative;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    /* margin: 30%; */
    flex-wrap: wrap-reverse;
}
#myCanvas{
    /* width: 55vw; 
    height: 60vh; */
    /* position: absolute; */
    background-color: rgba(16, 15, 15, 0.8) ;
    visibility: hidden;
    align-items: center;
    align-self: center;
    margin-bottom: 1vh;

}
#score{
    padding-left: 40px;
    display: flex;
    justify-content: center;
    visibility: hidden;
    font-family: 'Poppins-Thin', 'arial'; 
    font-weight: bold;
    font-size: 20px;
}
#scoreValue{
    padding-left: 10px;
    font-family: 'Poppins-Thin', 'arial'; 

}
#gameOver{
    background-color:  rgba(16, 15, 15, 0.8); 
    border-radius: 10px;
    visibility: hidden;
    width: 100%;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    position: absolute;
    top: 290px;
}
#gameOverIcon{
    margin-left: 30px;
}
#gameOverCaption{
    color: rgb(255, 255, 255);
    margin-top: -45px;
    font-size: 50px;
    font-weight: bold;
    font-family: 'Poppins-Thin', 'arial'; 
    text-align: center;
    flex-basis: 100%;
}
#tryAgain{
    position: absolute;
    margin-top: 10px;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
}
#tryAgainBtn{
    padding: 8px;
    color: rgb(255, 255, 255);
    background-color: rgb(0, 0, 0);
    border-radius: 8px;
    visibility: hidden;
    position: relative;
    font-size: 15px;
    font-weight: bolder;
    font-family: 'Poppins-Thin', 'arial'; 
    text-align: center;
}
#tryAgainBtn:hover{
    background-color: rgb(70, 69, 69);
}
#rightArrow{
    background: transparent;
}
footer{
    visibility: visible;
    position: relative;
    border-radius: 10px;
    margin-top: -300px;
    width: 100%;
    padding: 1%;
    background-color: rgba(16, 15, 15, 0.8);
}
#footerText{
    margin-left: 20px;
    font-family: 'Poppins-Thin', 'arial'; 
    color: white;
}

